--- a/src/main/webapp/style2.css
+++ b/src/main/webapp/style2.css
@@ -1,19 +1,11 @@
 /* General page style */
 body {
+	background-image: url("images/Background.png");
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #eaf3fa;
 }
 
-/* Header */
-.header {
-    background-color: #3b75a3;
-    color: white;
-    padding: 15px;
-    text-align: left;
-    font-size: 20px;
-    font-weight: bold;
-}
 
 /* Main layout - two columns */
 .main {
@@ -23,16 +15,18 @@ body {
 
 /* Left panel */
 .left-panel {
+	margin-top: 20px;
     width: 35%;
-    background: #d9e7f3;
+    background: #fff;
     padding: 20px;
-    border-right: 2px solid #b0c4de;
+    border-radius: 4px;
+    border: 12px solid #e6a9b7;
     overflow-y: auto;
 }
 
 .left-panel h2 {
     margin-top: 0;
-    color: #2c4a66;
+    color: #9c3353;
 }
 
 .left-panel label {
@@ -40,6 +34,7 @@ body {
     margin: 5px 0;
     font-size: 14px;
     cursor: pointer;
+    color: #d45d79;
 }
 
 .left-panel input {
@@ -50,7 +45,7 @@ body {
     margin-top: 15px;
     width: 100%;
     padding: 10px;
-    background-color: #2c5d85;
+    background-color: #d45d79;
     color: white;
     font-size: 16px;
     border: none;
@@ -59,26 +54,44 @@ body {
 }
 
 .left-panel button:hover {
-    background-color: #244c6b;
+    background-color: #9c3353;
 }
 
 /* Right panel */
 .right-panel {
     width: 65%;
-    background: #f1f9ff;
+    background-image: url("images/Background.png");
     padding: 20px;
     overflow-y: auto;
+    margin-left: 5px;
+    
 }
 
 .right-panel h2 {
     margin-top: 0;
-    color: #2c4a66;
+    color: #9c3353;
 }
 
 .right-panel p {
-    background: white;
+    background: #fff;
     padding: 8px;
     border-radius: 4px;
+    border: 0px solid #e6a9b7;
+    overflow-y: auto;
     margin: 5px 0;
-    border-left: 4px solid #3b75a3;
+}
+
+.right-panel ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.right-panel li {
+	
+	display: block;
+    
+    font-size: 14px;
+    cursor: pointer;
+    color: #d45d79;
+    margin-bottom: 5px;
 }
